# cryptotrader-core

./: Cargo.toml  README.md
src/: config.rs  error.rs  exchanges.rs  indicators.rs  lib.rs  threadpool.rs  utils.rs
src/exchanges/: binance.rs  bitfinex.rs  bittrex.rs  huobi.rs  kucoin.rs  mod.rs  nul.rs
src/indicators/: bbands.rs  macd.rs  mod.rs  ote.rs  rsi.rs  sma.rs
src/models/: asset.rs  balance.rs  book_ticker.rs  candlestick.rs  depth.rs  funds.rs  mod.rs  order.rs  pair.rs  position.rs  price.rs  trade.rs  trade_position.rs  trade_type.rs  trades.rs
src/presenters/: asset.rs  balance.rs  funds.rs  mod.rs  order.rs  position.rs  position_group.rs  trade_presenter.rs
src/socket/: binance.rs  mod.rs
src/threadpool/: mod.rs
tests/: common.rs  test_order_group_by_price.rs  test_pair.rs  test_position_presenter.rs  test_trade_presenter.rs  test_trades.rs
